[tool.poetry]
name = "agglomerates"
version = "0.1.0"
description = "Generate 3D nanoparticle agglomerates via Brownian collision simulation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
keywords = ["nanoparticle", "agglomerate", "brownian", "simulation", "stl", "3d"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.0"
matplotlib = "^3.5.0"
shapely = "^2.0.0"
scipy = "^1.9.0"
triangle = ">=20220202"
numba = ">=0.57.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
fluffy-clumps = "agglomerate:main"
fluffy-clumps-batch = "generate_batch:main"
fluffy-clumps-analyze = "analyze_batch:main"
fluffy-clumps-analyze-paper = "analyze_batch_paper_method:main"
fluffy-clumps-fractal = "analyze_fractal_dimension:main"
fluffy-clumps-bbox-csv = "extract_bbox_csv:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: extended paper reproduction tests (deselect with '-m \"not slow\"')",
]

